2006-02-27  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-error.h, libfreeipmi/src/ipmi-error.c
	(ipmi_strerror_r, ipmi_strerror_cmd_r): common/src/ipmi-common.h,
	common/src/ipmi-common.c (ipmi_error): Support netfn input
	parameter for command error codes/strings.

	* common/src/, bmc-info/, bmc-watchdog/: Adjust code appropriately
	to use new functions.
	
2006-02-26  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/udm, libfreeipmi/src/udm: Partition
	off .c and .h files for udm into subdirectories.

	* Globally adjust makefiles and includes to work off new include
	locations.

	* Remove '2' suffix from all UDM functions.

	* libfreeipmi/src/ipmi-sdr-repository-cache-api.c,
	libfreeipmi/src/ipmi-sel-api.c, libfreeipmi/src/ipmi-sensor-api.c,
	libfreeipmi/include/freeipmi/ipmi-sdr-repository-cache-api.h,
	libfreeipmi/include/freeipmi/ipmi-sel-api.h,
	libfreeipmi/include/freeipmi/ipmi-sensor-api.h,
	libfreeipmi/src/fiid-wrappers.h, libfreeipmi/src/err-wrappers.h,
	libfreeipmi/src/freeipmi-portability.h,
	libfreeipmi/src/freeipmi-portability.c: Move to common/src/ as
	convenience libraries and headers.

	* fish/, libfreeipmi/: Adjust makefiles and code appropriately for
	new location of includes and convenience libraries.

	* common/src/ipmi-sel-api.c, bmc-info/src/bmc-info.c,
	fish/src/common.h, ipmi-locate/src/ipmi-locate.c,
	ipmi-raw/src/ipmi-raw.c,
	libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c::Fix include
	typo with sys/time.h and time.h.

2006-02-25  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/, libfreeipmi/include/freeipmi: Move
	distributed files into libfreeipmi/include/freeipmi.

	* Globally re-work includes to work off "freeipmi/X" .h files.

	* libfreeipmi/src/freeipmi-build.h: Removed file.
	
2006-02-24  Albert Chu <chu11@llnl.gov>

	* Continue include reorganization to prepare for libfreeipmi
	rearchitecture.

	* common/src/argp-common.c, common/src/ipmi-ping.c,
	bmc-info/src/bmc-info.c, bmc-info/src/bmc-info-argp.c,