@@ -73,34 +73,6 @@ extern "C" {
         (((__channel_number+1) >= IPMI_CHANNEL_SINGLE_SESSION \
           && (__channel_number-1) <= IPMI_CHANNEL_CURRENT_CHANNEL) ? 1 : 0)
 
-#define IPMI_AUTHENTICATION_TYPE_NONE                  0x00
-#define IPMI_AUTHENTICATION_TYPE_MD2                   0x01
-#define IPMI_AUTHENTICATION_TYPE_MD5                   0x02
-#define IPMI_AUTHENTICATION_TYPE_STRAIGHT_PASSWORD_KEY 0x04
-#define IPMI_AUTHENTICATION_TYPE_OEM_PROP              0x05
-
-#define IPMI_AUTHENTICATION_TYPE_VALID(__authentication_type) \
-        (((__authentication_type) == IPMI_AUTHENTICATION_TYPE_NONE \
-          || (__authentication_type) == IPMI_AUTHENTICATION_TYPE_MD2 \
-          || (__authentication_type) == IPMI_AUTHENTICATION_TYPE_MD5 \
-          || (__authentication_type) == IPMI_AUTHENTICATION_TYPE_STRAIGHT_PASSWORD_KEY \
-          || (__authentication_type) == IPMI_AUTHENTICATION_TYPE_OEM_PROP) ? 1 : 0) 
-
-#define IPMI_PRIVILEGE_LEVEL_RESERVED     0x00
-#define IPMI_PRIVILEGE_LEVEL_CALLBACK     0x01
-#define IPMI_PRIVILEGE_LEVEL_USER         0x02
-#define IPMI_PRIVILEGE_LEVEL_OPERATOR     0x03
-#define IPMI_PRIVILEGE_LEVEL_ADMIN        0x04
-#define IPMI_PRIVILEGE_LEVEL_OEM          0x05
-#define IPMI_PRIVILEGE_LEVEL_NO_ACCESS    0x0F
-
-#define IPMI_PRIVILEGE_LEVEL_VALID(__privilege_level) \
-        (((__privilege_level) == IPMI_PRIVILEGE_LEVEL_CALLBACK \
-          || (__privilege_level) == IPMI_PRIVILEGE_LEVEL_USER \
-          || (__privilege_level) == IPMI_PRIVILEGE_LEVEL_OPERATOR \
-          || (__privilege_level) == IPMI_PRIVILEGE_LEVEL_ADMIN \
-          || (__privilege_level) == IPMI_PRIVILEGE_LEVEL_OEM) ? 1 : 0)
-
 #define IPMI_MESSAGING_ACCESS_MODE_DISABLED            0x0
 #define IPMI_MESSAGING_ACCESS_MODE_PRE_BOOT_ONLY       0x1
 #define IPMI_MESSAGING_ACCESS_MODE_ALWAYS_AVAILABLE    0x2
