@@ -30,7 +30,9 @@
 #include <errno.h>
 
 #include "freeipmi/ipmi-messaging-support-cmds.h"
+#include "freeipmi/ipmi-authentication-type-spec.h"
 #include "freeipmi/ipmi-cmd-spec.h"
+#include "freeipmi/ipmi-privilege-level-spec.h"
 
 #include "fiid-wrappers.h"
 #include "freeipmi-portability.h"
